[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-wiki"
version = "0.1.0"
description = "Game-Aware RAG Agent based on LangChain and MCP"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "defusedxml>=0.7.1",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.24",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
