[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WikiRag-Agent"
version = "1.0.0"
description = "A wiki RAG Agent based on LangChain and MCP"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.1.0",
    "langchain-openai>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=6.0.0",
    "defusedxml>=0.7.1",
    "qdrant-client>=1.10.0",
    "rank_bm25>=0.2.2",
    "python-dotenv>=1.0.1",
    "langchain>=1.2.13",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.2.10",
    "langchain-classic>=1.0.3",
    "langchain-google-genai>=1.0.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.2.20",
    "langgraph-checkpoint>=1.0.12",
    "langfuse>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langserve[all]>=0.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "chainlit>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "langgraph-cli"
]

[tool.setuptools.packages.find]
where = ["src"]
